# schedule_parser_bot

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  LICENSE  README.md  bot.py  docker-compose.yml  dockerfile  parser.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 528da7bf206c_add_chats_table.py  6bc1d78a44c8_init.py
src/: main.py
src/core/: config.py  exc.py  logger.py  middlewares.py  session.py  settings.py
src/handlers/: basic_handlers.py  start_handlers.py
src/models/: sqlmodels.py
src/repository/: chats_repository.py  schedule_repository.py  shedule_repository.py
src/scripts/: parser_scripts.py
src/services/: bot_service.py  parser_service.py
src/tasks/: bot_tasks.py  parser_tasks.py
src/utils/: bot_utils.py  parser_utils.py  session_utils.py  sql_utils.py
tests/: unit_tests.py
