[tool.poetry]
name = "shedule-parser"
version = "0.1.0"
description = ""
authors = ["thetrueryan <georgytoper@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.3"
aiogram = "^3.22.0"
fake-useragent = "^2.2.0"
selenium = "^4.35.0"
blinker = "1.7.0"
selenium-wire = "^5.1.0"
python-dotenv = "^1.1.1"
setuptools = ">=65.0.0"
apscheduler = "^3.11.0"
webdriver-manager = "^4.0.2"
black = "^25.1.0"
pydantic-settings = "^2.10.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.43"}
alembic = "^1.16.5"
mypy = "^1.18.1"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.10"
pytest = "^8.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
